# StudentHunter

./: .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  start.sh  test_users_example.csv
backend/: .env.example  admin.py  pyproject.toml
backend/studenthunter/admin_api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/studenthunter/admin_api/migrations/: 0001_initial.py  0002_initial.py  0002_systemsettings.py
backend/studenthunter/analytics/: __init__.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/studenthunter/analytics/migrations/: 0001_initial.py  0002_initial.py
backend/studenthunter/applications/: models.py  serializers.py  urls.py  views.py
backend/studenthunter/applications/migrations/: 0001_initial.py  0002_application_interview_canceled_and_more.py  0002_initial.py
backend/studenthunter/companies/: models.py  serializers.py  urls.py  views.py
backend/studenthunter/companies/migrations/: 0001_initial.py  0002_alter_company_description_alter_company_location.py  0002_company_highlights_alter_company_cover_image_and_more.py  0002_company_owner.py  0003_remove_company_owner.py
backend/studenthunter/config/: settings.py  urls.py
backend/studenthunter/config/settings/: __init__.py  base.py  dev.py  prod.py
backend/studenthunter/core/: admin.py  exceptions.py  models.py  permissions.py  renderers.py  serializers.py  storage.py  urls.py  utils.py  views.py
backend/studenthunter/core/migrations/: 0001_initial.py  0002_initial.py
backend/studenthunter/jobs/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/studenthunter/jobs/migrations/: 0001_initial.py  0002_initial.py  0002_job_created_by_job_is_active_alter_job_status_and_more.py  0003_alter_job_industry.py  0003_rename_applications_job_application_count_and_more.py
backend/studenthunter/resources/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/studenthunter/resources/migrations/: 0001_initial.py  0002_initial.py  0002_resource_created_by_resourcefile_uploaded_by_and_more.py
backend/studenthunter/studenthunter/: asgi.py  settings.py  urls.py  wsgi.py
backend/studenthunter/users/: admin.py  managers.py  models.py  serializers.py  storage.py  tests.py  urls.py  views.py
backend/studenthunter/users/migrations/: 0001_initial.py  0002_alter_customuser_managers_customuser_company_and_more.py  0002_studentprofile_achievements.py  (+11 more)
(+247 files in other folders)
