[project]
name = "studenthunter"
version = "0.1.0"
description = "studenthunter API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.11",
    "django>=5.2.1",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.28.0",
    "faker>=37.1.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "sentry-sdk>=2.27.0",
]
